VS插件增加格xaml

--- a/Tools/Dt/Editor/CellXaml.resx
+++ b/Tools/Dt/Editor/CellXaml.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAMMOAADDDgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkGgQpY0cMcGNHDHBjRwxwY0cMcGNH
+        DHBjRwxwY0cMcGNHDHBjRwxwY0cMcGNHDHBjRwxwY0cMcGNHDHBjRwxwY0cMcGNHDHBjRwxwY0cMcGNH
+        DHBjRwxwY0cMcD8tCEcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKh
+        G/+8hhbUlWoSqJVqEqiVahKolWoSqJVqEqiVahKolWoSqJVqEqjPlBnq4qEb/5VqEqiVahKolWoSqJVq
+        EqiVahKolWoSqJVqEqiVahKoqHgUvuKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABjRwxw4qEb/5VqEqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALyGFtTioRv/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/5VqEqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvIYW1OKh
+        G/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAC8hhbU4qEb/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKhG/+VahKoAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/5VqEqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAALyGFtTioRv/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/5Vq
+        EqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAvIYW1OKhG/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNH
+        DHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKhG/+VahKoAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8hhbU4qEb/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAY0cMcOKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/5Vq
+        EqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALyGFtTioRv/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABjRwxw4qEb/5VqEqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNH
+        DHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvIYW1OKhG/8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAY0cMcOKhG//PlBnqvIYW1LyGFtS8hhbUvIYW1LyGFtS8hhbUvIYW1LyGFtTZmxr14qEb/7yG
+        FtS8hhbUvIYW1LyGFtS8hhbUvIYW1LyGFtS8hhbUxYwY3uKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABjRwxw4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG//ioRv/4qEb/5VqEqgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAvIYW1OKhG/8AAAAAAAAAAAAAAABTOwpe2Zsa9dmbGvXFjBje4qEb/39aD48AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAC8hhbU4qEb/wAAAAAAAAAAUzsKXtmbGvXZmxr1UzsKXiQaBCnFjBje4qEb/39a
+        D48AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/5VqEqgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAALyGFtTioRv/AAAAAFM7Cl7Zmxr12Zsa9VM7Cl4AAAAAAAAAACQa
+        BCnFjBje4qEb/39aD48AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/lWoSqAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvIYW1OKhG/9TOwpe2Zsa9dmbGvVTOwpeAAAAAAAA
+        AAAAAAAAAAAAACQaBCnFjBje4qEb/39aD48AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKh
+        G/+VahKoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC8hhbU4qEb/9mbGvXZmxr1UzsKXgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAACQaBCnFjBje4qEb/39aD48AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABjRwxw4qEb/5VqEqgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALyGFtTioRv/2Zsa9VM7
+        Cl4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQaBCnFjBje4qEb/39aD48AAAAAAAAAAAAA
+        AAAAAAAAAAAAAGNHDHDioRv/lWoSqAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvIYW1OKh
+        G//FjBjeJBoEKQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKh4FL7ioRv/qHgUvgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAY0cMcOKhG/+VahKoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAC8hhbU4qEb/+KhG//FjBjeJBoEKQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACoeBS+4qEb/6h4
+        FL4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABjRwxw4qEb/6h4FL5jRwxwY0cMcGNHDHBjRwxwY0cMcGNH
+        DHBjRwxwY0cMcMWMGN7ioRv/f1oPj+KhG//FjBjeJBoEKQAAAAAAAAAAAAAAAAAAAAAAAAAAqHgUvuKh
+        G/+oeBS+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGNHDHDioRv/4qEb/+KhG//ioRv/4qEb/+Kh
+        G//ioRv/4qEb/+KhG//ioRv/4qEb/+KhG/8AAAAAf1oPj+KhG//FjBjeJBoEKQAAAAAAAAAAAAAAAKh4
+        FL7ioRv/qHgUvgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPy0IR5VqEqiVahKolWoSqJVq
+        EqiVahKolWoSqJVqEqiVahKolWoSqJVqEqiVahKolWoSqAAAAAAAAAAAf1oPj+KhG//FjBjeJBoEKQAA
+        AACoeBS+4qEb/6h4FL4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAf1oPj+Kh
+        G//FjBjeqHgUvuKhG/+oeBS+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAf1oPj+KhG//ioRv/qHgUvgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAf1oPj6h4FL4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA////////////////4AAAH+AAAB/gAAAf4/z/H+P8/x/j/P8f4/z/H+P8
+        /x/j/P8f4/z/H+P8/x/gAAAf4AAAH+P84H/j/MA/4/yGH+P8Dw/j/B+H4/w/w+P8P+Pj/B/H4AAPj+AA
+        hx/gAMI////gf///8P////n///////////8=
+</value>
+  </data>
 </root>
